--- a/index.html
+++ b/index.html
@@ -93,21 +93,21 @@
     <!-- <section id="collection">
         <div class="collections container">
             <div class="content">
-                <img src="https://i.postimg.cc/Xqmwr12c/clothing.webp" alt="img" />
+                <img src="" alt="img" />
                 <div class="img-content">
                     <p>Clothing Collections</p>
                     <button><a href="#sellers">SHOP NOW</a></button>
                 </div>
             </div>
             <div class="content2">
-                <img src="https://i.postimg.cc/8CmBZH5N/shoes.webp" alt="img" />
+                <img src="" alt="img" />
                 <div class="img-content2">
                     <p>Shoes Spring</p>
                     <button><a href="#sellers">SHOP NOW</a></button>
                 </div>
             </div>
             <div class="content3">
-                <img src="https://i.postimg.cc/MHv7KJYp/access.webp" alt="img" />
+                <img src="" alt="img" />
                 <div class="img-content3">
                     <p>Accessories</p>
                     <button><a href="#sellers">SHOP NOW</a></button>
@@ -338,13 +338,13 @@
             </div>
         </div>
         <div class="seller container">
-            <h2>Hot Sales</h2>
+            <h2>Selling Fast</h2>
             <div class="best-seller">
                 <div class="best-p1">
-                    <img src="https://i.postimg.cc/jS7pSQLf/na4.png" alt="img">
+                    <img src="https://i.postimg.cc/DznJ3xCj/Snapinsta-app-391632419-18304190548191734-3383432471472282059-n-1080.jpg" alt="img">
                     <div class="best-p1-txt">
                         <div class="name-of-p">
-                            <p>PS England Shoes</p>
+                            <p>Prashadam-Bade Hanuman Ji</p>
                         </div>
                         <div class="rating">
                             <i class='bx bxs-star'></i>
@@ -354,7 +354,7 @@
                             <i class='bx bxs-star'></i>
                         </div>
                         <div class="price">
-                            &dollar;37.24
+                            &#8377;100.00
                             <div class="colors">
                                 <i class='bx bxs-circle grey'></i>
                                 <i class='bx bxs-circle black'></i>
@@ -367,10 +367,10 @@
                     </div>
                 </div>
                 <div class="best-p1">
-                    <img src="https://i.postimg.cc/fbnB2yfj/na1.png" alt="img">
+                    <img src="https://i.postimg.cc/s2NDnzLr/shopping.webp" alt="img">
                     <div class="best-p1-txt">
                         <div class="name-of-p">
-                            <p>PS England T-Shirt</p>
+                            <p>Ram Shawl</p>
                         </div>
                         <div class="rating">
                             <i class='bx bxs-star'></i>
@@ -380,7 +380,7 @@
                             <i class='bx bxs-star'></i>
                         </div>
                         <div class="price">
-                            &dollar;10.23
+                            &#8377;450.00
                             <div class="colors">
                                 <i class='bx bxs-circle blank'></i>
                                 <i class='bx bxs-circle blue'></i>
@@ -393,10 +393,10 @@
                     </div>
                 </div>
                 <div class="best-p1">
-                    <img src="https://i.postimg.cc/RhVP7YQk/hs1.png" alt="img">
+                    <img src="https://i.postimg.cc/GmBqVJ7s/shopping.webp" alt="img">
                     <div class="best-p1-txt">
                         <div class="name-of-p">
-                            <p>PS England T-Shirt</p>
+                            <p>Bhagvatgita</p>
                         </div>
                         <div class="rating">
                             <i class='bx bxs-star'></i>
@@ -406,7 +406,7 @@
                             <i class='bx bxs-star'></i>
                         </div>
                         <div class="price">
-                            &dollar;15.24
+                            &#8377;300.00
                             <div class="colors">
                                 <i class='bx bxs-circle blank'></i>
                                 <i class='bx bxs-circle red'></i>
@@ -419,10 +419,10 @@
                     </div>
                 </div>
                 <div class="best-p1">
-                    <img src="https://i.postimg.cc/zD02zJq8/na2.png" alt="img">
+                    <img src="https://i.postimg.cc/wjL9XPKW/shopping.webp" alt="img">
                     <div class="best-p1-txt">
                         <div class="name-of-p">
-                            <p>PS England Bag</p>
+                            <p>Prashad Dana</p>
                         </div>
                         <div class="rating">
                             <i class='bx bxs-star'></i>
@@ -432,7 +432,7 @@
                             <i class='bx bx-star'></i>
                         </div>
                         <div class="price">
-                            &dollar;09.28
+                            &#8377;150.00
                             <div class="colors">
                                 <i class='bx bxs-circle blank'></i>
                                 <i class='bx bxs-circle grey'></i>
