--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style2.css">
+    <link rel="icon" type="image/x-icon" href="https://i.postimg.cc/wTLFw9wY/2018082199.jpg">
     <title>Kumbh Darshan</title>
 </head>
 <body>
