--- a/index.html
+++ b/index.html
@@ -65,27 +65,27 @@
             <iframe width="90%" height="500px" allowFullScreen="true" allow="accelerometer; magnetometer; gyroscope" style="display:block; margin:20px auto; border:0 none; max-width:880px;border-radius:8px; box-shadow: 0 1px 1px rgba(0,0,0,0.11),0 2px 2px rgba(0,0,0,0.11),0 4px 4px rgba(0,0,0,0.11),0 6px 8px rgba(0,0,0,0.11),0 8px 16px rgba(0,0,0,0.11);" src="https://panoraven.com/en/embed/jTrwweQgrR"></iframe>
             <div class="caption">
                 <h3>Sangam Night</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, error!</p>
+                <p>According to legends, Vishnu was carrying a Kumbh (pot) of amrit (nectar), when a scuffle broke out and four drops were spilled. They fell to earth at the four Tirthas of Prayag, Haridwar, Nasik and Ujjain. A tirtha is a place where the devout can attain salvation. The event is commemorated every three years by the Kumbh Mela, held at each tirtha in turn; the Sangam is known as Tirtharaj, the ‘King of Tirthas’ and here the Kumbh is held once in every twelve years, which is the greatest and holiest of all.</p>
             </div>
             <iframe width="90%" height="500px" allowFullScreen="true" allow="accelerometer; magnetometer; gyroscope" style="display:block; margin:20px auto; border:0 none; max-width:880px;border-radius:8px; box-shadow: 0 1px 1px rgba(0,0,0,0.11),0 2px 2px rgba(0,0,0,0.11),0 4px 4px rgba(0,0,0,0.11),0 6px 8px rgba(0,0,0,0.11),0 8px 16px rgba(0,0,0,0.11);" src="https://panoraven.com/en/embed/pdoMkIxcBQ"></iframe>
             <div class="caption">
                 <h3>Sangam Day</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, error!</p>
+                <p>This is the point where the brown water of the Ganga meets the green water of the Yamuna, along with the mythical Saraswati, which remains unseen but believed to run underground. It is located about 7 km from Civil Lines, overlooked by the eastern ramparts of the Akbar Fort.</p>
             </div>
             <iframe width="90%" height="500px" allowFullScreen="true" allow="accelerometer; magnetometer; gyroscope" style="display:block; margin:20px auto; border:0 none; max-width:880px;border-radius:8px; box-shadow: 0 1px 1px rgba(0,0,0,0.11),0 2px 2px rgba(0,0,0,0.11),0 4px 4px rgba(0,0,0,0.11),0 6px 8px rgba(0,0,0,0.11),0 8px 16px rgba(0,0,0,0.11);" src="https://panoraven.com/en/embed/nCECe2tk6h"></iframe>
             <div class="caption">
                 <h3>Sangam Mid</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, error!</p>
+                <p>Triveni Sangam, Allahabad is the spot where your spiritual awakening would be felt watching the sight of Ganga meeting Yamuna with Saraswati.</p>
             </div>
             <iframe width="90%" height="500px" allowFullScreen="true" allow="accelerometer; magnetometer; gyroscope" style="display:block; margin:20px auto; border:0 none; max-width:880px;border-radius:8px; box-shadow: 0 1px 1px rgba(0,0,0,0.11),0 2px 2px rgba(0,0,0,0.11),0 4px 4px rgba(0,0,0,0.11),0 6px 8px rgba(0,0,0,0.11),0 8px 16px rgba(0,0,0,0.11);" src="https://panoraven.com/en/embed/bdlbmNGIVi"></iframe>
             <div class="caption">
                 <h3>Allahabad Fort</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, error!</p>
+                <p>Allahabad Fort is the location of the much revered Akshayavat or "immortal tree." Legends say that if anyone jumps from this centuries-old banyan tree he will attain immortality. Civilians are not allowed to see this tree. It is near the southern wall and is one among many trees that can be seen from outside the southern wall of the fort.</p>
             </div>
             <iframe width="90%" height="500px" allowFullScreen="true" allow="accelerometer; magnetometer; gyroscope" style="display:block; margin:20px auto; border:0 none; max-width:880px;border-radius:8px; box-shadow: 0 1px 1px rgba(0,0,0,0.11),0 2px 2px rgba(0,0,0,0.11),0 4px 4px rgba(0,0,0,0.11),0 6px 8px rgba(0,0,0,0.11),0 8px 16px rgba(0,0,0,0.11);" src="https://panoraven.com/en/embed/jSOY382DZ3"></iframe>
             <div class="caption">
                 <h3>Bade Hanuman Ji</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, error!</p>
+                <p>Popularly known as Lette Hanuman Mandir, Bade Hanuman Temple is dedicated to Hanuman, the monkey god. This temple is an underground pit that houses a huge lying idol of Hanumanji, which is six to seven feet below the ground. This is the only Lord Hanuman temple in the world where the idol is in a reclining position. As per the mythology, Hanuman rested here after burning Lanka. Another interesting thing to know about this temple is that one side of Lord Hanuman's statue is half immersed in the water of the River Ganges. In the monsoon season when the water level rises, it is believed that the water of the river rises to touch the feet of the deity. During this time, a lot of devotees come to visit this sacred sight.</p>
             </div>
         </div>
     </main>
