--- a/index.html
+++ b/index.html
@@ -2,32 +2,75 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign up</title>
+    <meta name="viewport" content="width=device-width,
+    initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
+    <title>MahaKumbh 2025</title>
 </head>
+
 <body>
-    <div class="signup-container">
-        <form class="signup-form" action="#" method="POST">
-          <h2>Create an account</h2>
-          <div class="form-group">
-            <label for="username">Username</label>
-            <input type="text" id="username" name="username" required>
-          </div>
-          <div class="form-group">
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" required>
-          </div>
-          <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" id="password" name="password" required>
-          </div>
-          <div class="form-group">
-            <label for="confirm_password">Confirm Password</label>
-            <input type="password" id="confirm_password" name="confirm_password" required>
-          </div>
-          <button type="submit">Sign Up</button>
-        </form>
-      </div>
+    <main>
+        <!--Landing Area-->
+        <div id="landing">
+            <div id="landing-text">
+                <div id="landing-text-inner">
+                    <h1>MahaKumbh Darshan</h1>
+                    <h2>At your place</h2>
+                    <a href="#images" class="btn" id="view-work">
+                        Explore
+                    </a>
+                    <br>
+                    <a href="shop.html" class="btn" id="view-work">
+                        Shop
+                    </a>
+                </div>
+            </div>
+            <div id="landing-image"></div>
+        </div>
+        <div id="images">
+            <div id="header">
+                <h2>360 Views</h2>
+            </div>
+            <iframe width="90%" height="500px" allowFullScreen="true" allow="accelerometer; magnetometer; gyroscope" style="display:block; margin:20px auto; border:0 none; max-width:880px;border-radius:8px; box-shadow: 0 1px 1px rgba(0,0,0,0.11),0 2px 2px rgba(0,0,0,0.11),0 4px 4px rgba(0,0,0,0.11),0 6px 8px rgba(0,0,0,0.11),0 8px 16px rgba(0,0,0,0.11);" src="https://panoraven.com/en/embed/jTrwweQgrR"></iframe>
+            <div class="caption">
+                <h3>Sangam Night</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, error!</p>
+            </div>
+            <iframe width="90%" height="500px" allowFullScreen="true" allow="accelerometer; magnetometer; gyroscope" style="display:block; margin:20px auto; border:0 none; max-width:880px;border-radius:8px; box-shadow: 0 1px 1px rgba(0,0,0,0.11),0 2px 2px rgba(0,0,0,0.11),0 4px 4px rgba(0,0,0,0.11),0 6px 8px rgba(0,0,0,0.11),0 8px 16px rgba(0,0,0,0.11);" src="https://panoraven.com/en/embed/pdoMkIxcBQ"></iframe>
+            <div class="caption">
+                <h3>Sangam Day</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, error!</p>
+            </div>
+            <iframe width="90%" height="500px" allowFullScreen="true" allow="accelerometer; magnetometer; gyroscope" style="display:block; margin:20px auto; border:0 none; max-width:880px;border-radius:8px; box-shadow: 0 1px 1px rgba(0,0,0,0.11),0 2px 2px rgba(0,0,0,0.11),0 4px 4px rgba(0,0,0,0.11),0 6px 8px rgba(0,0,0,0.11),0 8px 16px rgba(0,0,0,0.11);" src="https://panoraven.com/en/embed/nCECe2tk6h"></iframe>
+            <div class="caption">
+                <h3>Sangam Mid</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, error!</p>
+            </div>
+            <iframe width="90%" height="500px" allowFullScreen="true" allow="accelerometer; magnetometer; gyroscope" style="display:block; margin:20px auto; border:0 none; max-width:880px;border-radius:8px; box-shadow: 0 1px 1px rgba(0,0,0,0.11),0 2px 2px rgba(0,0,0,0.11),0 4px 4px rgba(0,0,0,0.11),0 6px 8px rgba(0,0,0,0.11),0 8px 16px rgba(0,0,0,0.11);" src="https://panoraven.com/en/embed/bdlbmNGIVi"></iframe>
+            <div class="caption">
+                <h3>Allahabad Fort</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, error!</p>
+            </div>
+            <iframe width="90%" height="500px" allowFullScreen="true" allow="accelerometer; magnetometer; gyroscope" style="display:block; margin:20px auto; border:0 none; max-width:880px;border-radius:8px; box-shadow: 0 1px 1px rgba(0,0,0,0.11),0 2px 2px rgba(0,0,0,0.11),0 4px 4px rgba(0,0,0,0.11),0 6px 8px rgba(0,0,0,0.11),0 8px 16px rgba(0,0,0,0.11);" src="https://panoraven.com/en/embed/jSOY382DZ3"></iframe>
+            <div class="caption">
+                <h3>Bade Hanuman Ji</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, error!</p>
+            </div>
+        </div>
+    </main>
+
+    <footer>
+        <h3>Get In Touch</h3>
+        <p>Email or call us</p>
+        <p>Email: <strong>contact@kumbhdarshan.,test</strong></p>
+        <p>Phone:
+            <a href="+91 9595555555">
+                <strong>+91 9595555555</strong>
+            </a>
+        </p>
+    </footer>
+
 </body>
+ 
 </html>
