--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="stylemain.css">
     <title>MahaKumbh 2025</title>
 </head>
 
