--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                 </div>
             </div>
         </div>
-        <div class="seller container">
+<!--         <div class="seller container">
             <h2>Hot Sales</h2>
             <div class="best-seller">
                 <div class="best-p1">
@@ -447,7 +447,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <section id="contact">
         <div class="contact container">
         <div class="map">
