--- a/index.html
+++ b/index.html
@@ -338,14 +338,14 @@
                 </div>
             </div>
         </div>
-<!--         <div class="seller container">
+        <div class="seller container">
             <h2>Hot Sales</h2>
             <div class="best-seller">
                 <div class="best-p1">
-                    <img src="https://i.postimg.cc/jS7pSQLf/na4.png" alt="img">
+                    <img src="https://i.postimg.cc/43QtSYg9/shopping.webp" alt="img">
                     <div class="best-p1-txt">
                         <div class="name-of-p">
-                            <p>PS England Shoes</p>
+                            <p>Mahabharat</p>
                         </div>
                         <div class="rating">
                             <i class='bx bxs-star'></i>
@@ -355,7 +355,7 @@
                             <i class='bx bxs-star'></i>
                         </div>
                         <div class="price">
-                            &dollar;37.24
+                            &#8377;300.00
                             <div class="colors">
                                 <i class='bx bxs-circle grey'></i>
                                 <i class='bx bxs-circle black'></i>
@@ -368,10 +368,10 @@
                     </div>
                 </div>
                 <div class="best-p1">
-                    <img src="https://i.postimg.cc/fbnB2yfj/na1.png" alt="img">
+                    <img src="https://i.postimg.cc/MZtGrgFX/shopping.webp" alt="img">
                     <div class="best-p1-txt">
                         <div class="name-of-p">
-                            <p>PS England T-Shirt</p>
+                            <p>Murmura Prashad</p>
                         </div>
                         <div class="rating">
                             <i class='bx bxs-star'></i>
@@ -381,7 +381,7 @@
                             <i class='bx bxs-star'></i>
                         </div>
                         <div class="price">
-                            &dollar;10.23
+                            &#8377;150.00
                             <div class="colors">
                                 <i class='bx bxs-circle blank'></i>
                                 <i class='bx bxs-circle blue'></i>
@@ -394,10 +394,10 @@
                     </div>
                 </div>
                 <div class="best-p1">
-                    <img src="https://i.postimg.cc/RhVP7YQk/hs1.png" alt="img">
+                    <img src="https://i.postimg.cc/wjL9XPKW/shopping.webp" alt="img">
                     <div class="best-p1-txt">
                         <div class="name-of-p">
-                            <p>PS England T-Shirt</p>
+                            <p>Prashad Dana</p>
                         </div>
                         <div class="rating">
                             <i class='bx bxs-star'></i>
@@ -407,7 +407,7 @@
                             <i class='bx bxs-star'></i>
                         </div>
                         <div class="price">
-                            &dollar;15.24
+                            &#8377;150.00
                             <div class="colors">
                                 <i class='bx bxs-circle blank'></i>
                                 <i class='bx bxs-circle red'></i>
@@ -420,10 +420,10 @@
                     </div>
                 </div>
                 <div class="best-p1">
-                    <img src="https://i.postimg.cc/zD02zJq8/na2.png" alt="img">
+                    <img src="https://i.postimg.cc/PfYvq6JM/8shie-512.webp" alt="img">
                     <div class="best-p1-txt">
                         <div class="name-of-p">
-                            <p>PS England Bag</p>
+                            <p>Sangam GangaYammuna Jal</p>
                         </div>
                         <div class="rating">
                             <i class='bx bxs-star'></i>
@@ -433,7 +433,7 @@
                             <i class='bx bx-star'></i>
                         </div>
                         <div class="price">
-                            &dollar;09.28
+                            &#8377;50.00
                             <div class="colors">
                                 <i class='bx bxs-circle blank'></i>
                                 <i class='bx bxs-circle grey'></i>
@@ -447,7 +447,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
     <section id="contact">
         <div class="contact container">
         <div class="map">
